--- a/index.html
+++ b/index.html
@@ -8,76 +8,140 @@
 </head>
 <body>
   <div class="app">
+    <!-- Top Header (dashboard-like) -->
     <header class="topbar">
       <div class="top-left">
         <div class="badge" id="turnBadge">1年 4月 上旬</div>
         <div class="subtle" id="schoolBadge">春風高校 陸上部</div>
       </div>
 
+      <div class="top-center">
+        <div class="title">SPRINT DYNASTY</div>
+        <div class="subtitle" id="headerSubtitle">育成シミュレーション</div>
+      </div>
+
       <div class="top-right">
         <div class="next-meet">
-          <div class="label">次大会</div>
+          <div class="label">NEXT</div>
           <div class="value" id="nextMeetText">新人戦 地区大会（あと3ターン）</div>
         </div>
       </div>
     </header>
 
     <main class="main">
-      <!-- Left: training scene -->
-      <section class="panel scene">
-        <div class="panel-title">
-          <div class="panel-title-left">
-            <span class="chip">練習</span>
-            <span class="scene-title" id="sceneTitle">フォーム意識（流し）</span>
-          </div>
-          <div class="panel-title-right">
-            <span class="weather-hint" id="atmosphereText">夕方、風が少し冷たい。</span>
-          </div>
-        </div>
-
-        <div class="scene-wrap">
-          <canvas id="sceneCanvas" width="940" height="420"></canvas>
-          <div class="scene-overlay">
-            <div class="scene-caption" id="sceneCaption">春風高校は弱小。でも、直線は嘘をつかない。</div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Right: stats + team -->
-      <section class="right-col">
-        <section class="panel stats">
-          <div class="panel-title">
-            <div class="panel-title-left">
+      <!-- Left Column -->
+      <section class="col left">
+        <!-- Player Card -->
+        <section class="panel player">
+          <div class="panel-head">
+            <div class="panel-head-left">
               <span class="chip">主人公</span>
               <span class="player-name" id="playerNameText">（未設定）</span>
             </div>
-            <div class="panel-title-right">
+            <div class="panel-head-right">
               <span class="chip chip-dark">怪我</span>
               <span class="injury" id="injuryText">0 / 3</span>
             </div>
           </div>
 
-          <div class="stats-grid" id="statsGrid"></div>
+          <div class="player-body">
+            <div class="portrait" aria-hidden="true">
+              <div class="portrait-inner">
+                <div class="portrait-face"></div>
+              </div>
+              <div class="portrait-note" id="portraitNote">1年 / 春風高校</div>
+            </div>
 
-          <div class="fatigue-block">
-            <div class="fatigue-head">
-              <div class="label">疲労</div>
-              <div class="value"><span id="fatigueValue">0</span>%</div>
+            <div class="stats-wrap">
+              <div class="stats-grid" id="statsGrid"></div>
+
+              <div class="fatigue-block">
+                <div class="fatigue-head">
+                  <div class="label">疲労</div>
+                  <div class="value"><span id="fatigueValue">0</span>%</div>
+                </div>
+                <div class="bar">
+                  <div class="bar-fill" id="fatigueBar" style="width:0%"></div>
+                </div>
+                <div class="fatigue-note" id="fatigueNote">疲労が高いほど成長効率が落ち、一定以上で怪我リスクが上がります。</div>
+              </div>
             </div>
-            <div class="bar">
-              <div class="bar-fill" id="fatigueBar" style="width:0%"></div>
-            </div>
-            <div class="fatigue-note" id="fatigueNote">疲労が100%に到達すると怪我をします。</div>
           </div>
         </section>
 
+        <!-- Scene / Flavor -->
+        <section class="panel scene">
+          <div class="panel-head">
+            <div class="panel-head-left">
+              <span class="chip">シーン</span>
+              <span class="scene-title" id="sceneTitle">フォーム意識（流し）</span>
+            </div>
+            <div class="panel-head-right">
+              <span class="weather-hint" id="atmosphereText">夕方、風が少し冷たい。</span>
+            </div>
+          </div>
+
+          <div class="scene-wrap">
+            <canvas id="sceneCanvas" width="940" height="360"></canvas>
+            <div class="scene-overlay">
+              <div class="scene-caption" id="sceneCaption">春風高校は弱小。でも、積み上げた分だけ速くなる。</div>
+            </div>
+          </div>
+        </section>
+      </section>
+
+      <!-- Right Column -->
+      <section class="col right">
+        <!-- Actions -->
+        <section class="panel actions">
+          <div class="panel-head">
+            <div class="panel-head-left">
+              <span class="chip">行動</span>
+              <span class="subtle">（選ぶと自動で次ターンへ）</span>
+            </div>
+            <div class="panel-head-right">
+              <span class="chip chip-dark">状態</span>
+              <span class="subtle" id="turnStateText">行動を選んでください</span>
+            </div>
+          </div>
+
+          <div class="action-groups">
+            <div class="group">
+              <div class="group-title">通常練習</div>
+              <div class="btn-grid">
+                <button class="btn" data-action="start">スタート練習</button>
+                <button class="btn" data-action="tempo">流し（フォーム）</button>
+                <button class="btn" data-action="core">体幹</button>
+                <button class="btn" data-action="mental">メンタル</button>
+              </div>
+            </div>
+
+            <div class="group">
+              <div class="group-title">強化</div>
+              <div class="btn-grid">
+                <button class="btn btn-warn" data-action="power">筋トレ</button>
+              </div>
+              <div class="group-note">※強化は疲労が溜まりやすい。高疲労時は怪我に注意。</div>
+            </div>
+
+            <div class="group">
+              <div class="group-title">回復</div>
+              <div class="btn-grid">
+                <button class="btn btn-secondary" data-action="massage">マッサージ</button>
+                <button class="btn btn-secondary" data-action="rest">休養</button>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Team -->
         <section class="panel team">
-          <div class="panel-title">
-            <div class="panel-title-left">
-              <span class="chip">チームメイト</span>
+          <div class="panel-head">
+            <div class="panel-head-left">
+              <span class="chip">チーム</span>
               <span class="subtle">（8人・学年混在）</span>
             </div>
-            <div class="panel-title-right">
+            <div class="panel-head-right">
               <span class="chip chip-dark">総合</span>
               <span class="subtle" id="teamPowerText">—</span>
             </div>
@@ -85,52 +149,32 @@
 
           <div class="team-list" id="teamList"></div>
         </section>
+
+        <!-- Log / Coach -->
+        <section class="panel coach">
+          <div class="panel-head">
+            <div class="panel-head-left">
+              <span class="chip">監督コメント</span>
+            </div>
+          </div>
+
+          <div class="coachbox">
+            <div class="coach-icon" aria-hidden="true"></div>
+            <div class="coach-text">
+              <div class="coach-name">監督（おじちゃん先生）</div>
+              <div class="coach-line" id="coachLine">「焦るな。まだ時間はある。まず“自分の走り”を見つけよう。」</div>
+              <div class="coach-sub" id="coachSub">—</div>
+            </div>
+          </div>
+        </section>
       </section>
     </main>
-
-    <section class="panel actions">
-      <div class="actions-row">
-        <button class="btn" data-action="start">スタート練習</button>
-        <button class="btn" data-action="tempo">流し（フォーム）</button>
-        <button class="btn" data-action="power">筋トレ</button>
-        <button class="btn" data-action="core">体幹</button>
-        <button class="btn" data-action="mental">メンタル</button>
-        <button class="btn btn-secondary" data-action="massage">マッサージ</button>
-        <button class="btn btn-secondary" data-action="rest">休養</button>
-
-        <div class="spacer"></div>
-
-        <button class="btn btn-primary" data-action="next">次ターンへ</button>
-      </div>
-    </section>
-
-    <footer class="coachbar">
-      <div class="coach">
-        <div class="coach-icon" aria-hidden="true">
-          <svg width="42" height="42" viewBox="0 0 64 64" fill="none">
-            <circle cx="32" cy="32" r="28" fill="rgba(255,255,255,0.08)"/>
-            <circle cx="32" cy="26" r="12" fill="rgba(255,255,255,0.85)"/>
-            <path d="M18 52c2-10 26-10 28 0" fill="rgba(255,255,255,0.55)"/>
-            <path d="M24 26c2-2 4-3 8-3s6 1 8 3" stroke="rgba(0,0,0,0.35)" stroke-width="2" stroke-linecap="round"/>
-            <path d="M26 29c0 0 1 3 6 3s6-3 6-3" stroke="rgba(0,0,0,0.35)" stroke-width="2" stroke-linecap="round"/>
-            <path d="M22 22c2-6 18-6 20 0" stroke="rgba(0,0,0,0.25)" stroke-width="3" stroke-linecap="round"/>
-            <path d="M20 27c-2 2-2 6 1 8" stroke="rgba(255,255,255,0.65)" stroke-width="2" stroke-linecap="round"/>
-            <path d="M44 27c2 2 2 6-1 8" stroke="rgba(255,255,255,0.65)" stroke-width="2" stroke-linecap="round"/>
-          </svg>
-        </div>
-
-        <div class="coach-text">
-          <div class="coach-name">監督（おじちゃん先生）</div>
-          <div class="coach-line" id="coachLine">「焦るな。まだ時間はある。まず“自分の走り”を見つけよう。」</div>
-        </div>
-      </div>
-    </footer>
   </div>
 
   <!-- Name modal -->
   <div class="modal-backdrop" id="nameModalBackdrop" hidden>
-    <div class="modal">
-      <div class="modal-title">名前を入力してください</div>
+    <div class="modal" role="dialog" aria-modal="true" aria-labelledby="nameModalTitle">
+      <div class="modal-title" id="nameModalTitle">名前を入力してください</div>
       <div class="modal-desc">主人公の名前はいつでも変更できます（ローカル保存）。</div>
       <input id="nameInput" class="modal-input" type="text" maxlength="12" placeholder="例：ケイスケ" />
       <div class="modal-actions">
